# bennugd2-builder

./: .gitignore  README.md  makefile
.github/workflows/: cd.yml  ci.yml  deploy-docker.yml  docker.yml
android-arm64/: README.md  build-android.sh  dockerfile
android-arm64/android_template/: local.properties
android-arm64/android_template/app/src/main/java/org/libsdl/app/: SDLActivity.java
linux-i386/: README.md  dockerfile
linux-x64/: dockerfile
linux-x86_64/: README.md  build-opk.sh  dockerfile
psp-mips/: .gitignore  README.md  dockerfile
psp-mips/hello/: CMakeLists.txt  makefile
psp-mips/hello/src/: main.c
switch-aarch64/: README.md  build-nro.sh  dockerfile
